--- a/References.html
+++ b/References.html
@@ -8,19 +8,20 @@
   <meta name="CocoaVersion" content="1404.13">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 17.0px; font: 15.0px Arial; color: #000000; -webkit-text-stroke: #000000; background-color: #ffffff}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 17.0px; font: 12.0px Arial; color: #000000; -webkit-text-stroke: #000000; background-color: #ffffff}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 14.0px; font: 12.0px Arial; color: #0000ee; -webkit-text-stroke: #000000; background-color: #ffffff}
     span.s1 {font-kerning: none}
-    span.s2 {font: 12.0px Arial; font-kerning: none}
+    span.s2 {text-decoration: underline ; font-kerning: none}
   </style>
 </head>
 <body>
 <p class="p1"><span class="s1"><b>References</b></span></p>
-<p class="p2"><span class="s1"><a href="http://scikit-learn.org/stable/modules/generated/sklearn.metrics.precision_score.html">http://scikit-learn.org/stable/modules/generated/sklearn.metrics.precision_score.html<span class="s2"></span></a></span></p>
-<p class="p2"><span class="s1"><a href="http://scikit-learn.org/stable/modules/cross_validation.html">http://scikit-learn.org/stable/modules/cross_validation.html<span class="s2"></span></a></span></p>
-<p class="p2"><span class="s1"><a href="http://scikit-learn.org/stable/modules/pipeline.html">http://scikit-learn.org/stable/modules/pipeline.html<span class="s2"></span></a></span></p>
-<p class="p2"><span class="s1"><a href="http://scikit-learn.org/stable/modules/tree.html#tree">http://scikit-learn.org/stable/modules/tree.html#tree<span class="s2"></span></a></span></p>
-<p class="p2"><span class="s1"><a href="http://scikit-learn.org/stable/modules/generated/sklearn.tree.export_graphviz.html#sklearn.tree.export_graphviz">http://scikit-learn.org/stable/modules/generated/sklearn.tree.export_graphviz.html#sklearn.tree.export_graphviz<span class="s2"></span></a></span></p>
-<p class="p2"><span class="s1"><a href="http://brewformulas.org/Graphviz">http://brewformulas.org/Graphviz<span class="s2"></span></a></span></p>
-<p class="p2"><span class="s1"><a href="http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html#sklearn.model_selection.train_test_split">http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html#sklearn.model_selection.train_test_split</a></span></p>
+<p class="p2"><span class="s2"><a href="http://scikit-learn.org/stable/modules/generated/sklearn.metrics.precision_score.html">http://scikit-learn.org/stable/modules/generated/sklearn.metrics.precision_score.html</a></span></p>
+<p class="p2"><span class="s2"><a href="http://scikit-learn.org/stable/modules/cross_validation.html">http://scikit-learn.org/stable/modules/cross_validation.html</a></span></p>
+<p class="p2"><span class="s2"><a href="http://scikit-learn.org/stable/modules/pipeline.html">http://scikit-learn.org/stable/modules/pipeline.html</a></span></p>
+<p class="p2"><span class="s2"><a href="http://scikit-learn.org/stable/modules/tree.html#tree">http://scikit-learn.org/stable/modules/tree.html#tree</a></span></p>
+<p class="p2"><span class="s2"><a href="http://scikit-learn.org/stable/modules/generated/sklearn.tree.export_graphviz.html#sklearn.tree.export_graphviz">http://scikit-learn.org/stable/modules/generated/sklearn.tree.export_graphviz.html#sklearn.tree.export_graphviz</a></span></p>
+<p class="p2"><span class="s2"><a href="http://brewformulas.org/Graphviz">http://brewformulas.org/Graphviz</a></span></p>
+<p class="p2"><span class="s2"><a href="http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html#sklearn.model_selection.train_test_split">http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html#sklearn.model_selection.train_test_split</a></span></p>
+<p class="p2"><span class="s2"><a href="https://en.wikipedia.org/wiki/Precision_and_recall">https://en.wikipedia.org/wiki/Precision_and_recall</a></span></p>
 </body>
 </html>
